# S3-Portable-Explorer

./: .gitignore  AGENTS.md  example.env  index.html  package.json  supabase_schema.sql
.agents/rules/: rules.md
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: ThemeContext.tsx  routes.tsx
src/app/buckets/: index.tsx
src/app/dashboard/: index.tsx
src/app/layouts/: deafaultLayout.tsx
src/assets/: main.css
src/components/: ActionMenu.tsx  AppLoading.tsx  Breadcrumb.tsx  ConfirmModal.tsx  FolderIcon.tsx  GenericTable.tsx  MoveToModal.tsx  RenameModal.tsx
src/components/navbar/: lateralNavbar.tsx  navItem.ts
src/components/navigation/: Breadcrumbs.tsx
src/components/updater/: UpdateNotifier.tsx
src/features/aws/: awsCli.ts  awsSsoOidc.ts  s3Client.ts
src/features/downloads/: downloadDatabase.ts  downloadManager.ts  downloadStore.ts
src/features/explorer/: types.ts
src/features/favorites/: favoritesStore.ts
src/features/statistics/: statisticsDatabase.ts
src/features/supabase/: supabaseClient.ts  supabaseStore.ts
src/pages/: ErrorPage.tsx  bucket.tsx  bucketExplorer.tsx  cloudGroups.tsx  cloudRoutes.tsx  dashboard.tsx  downloads.tsx  favorites.tsx  settings.tsx
src/shared/: i18n.ts
src/shared/hooks/: useConfirmStore.ts  useDatabase.ts  useLoadingStore.ts  useRouteNavigator.ts
src/shared/locales/: en.json  es.json
src/shared/utils/: dialog.ts
(+4 files in other folders)
